feat: update branding and responsive

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,8 +1,18 @@
 @import '@/styles/colors.scss';
 
+html {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: 'Almarai';
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
+
 a {
   text-decoration: none;
   color: $green;
