feat: update metadata

--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -1,8 +1,6 @@
 //purple
-$green: #50BAB1;
+$green: #50bab1;
 $white: #fff;
-$grey: #5D5A77;
+$grey: #5d5a77;
 $alt-grey: #444258;
 $black: #333333;
-
-
