--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,3 @@
-@import '@/styles/colors.scss';
-
 html {
   height: 100%;
   margin: 0;
@@ -17,8 +15,12 @@ a {
   text-decoration: none;
   color: $green;
 }
-.el-button--primary {
-  font-weight: bold;
-  width: 100%;
-  min-height: 60px;
+.btn {
+  cursor: pointer;
+  padding: 16px 24px;
+  background: $black;
+  border: none;
+  border-radius: 24px;
+  color: $white;
+  font-size: 16px;
 }
