--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,22 +5,8 @@ html {
 }
 
 body {
-  font-family: 'Almarai';
+  font-family: 'Poppins';
   height: 100%;
   margin: 0;
   padding: 0;
-}
-
-a {
-  text-decoration: none;
-  color: $green;
-}
-.btn {
-  cursor: pointer;
-  padding: 16px 24px;
-  background: $black;
-  border: none;
-  border-radius: 24px;
-  color: $white;
-  font-size: 16px;
 }
